force-app/main/default/objects/Building__c/fields/Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Type__c</fullName>
    <label>Apartment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2A</fullName>
                <color>#AFCADF</color>
                <label>2A</label>
            </value>
            <value>
                <fullName>2B</fullName>
                <color>#AFCADF</color>
                <label>2B</label>
            </value>
            <value>
                <fullName>1A</fullName>
                <color>#EFAE73</color>
                <label>1A</label>
            </value>
            <value>
                <fullName>1B</fullName>
                <color>#EFAE73</color>
                <label>1B</label>
            </value>
            <value>
                <fullName>2C</fullName>
                <color>#AFCADF</color>
                <label>2C</label>
            </value>
            <value>
                <fullName>2D</fullName>
                <color>#AFCADF</color>
                <label>2D</label>
            </value>
            <value>
                <fullName>2E</fullName>
                <color>#AFCADF</color>
                <label>2E</label>
            </value>
            <value>
                <fullName>2F</fullName>
                <color>#AFCADF</color>
                <label>2F</label>
            </value>
            <value>
                <fullName>3A</fullName>
                <color>#993399</color>
                <label>3A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>