force-app/main/default/objects/Building__c/fields/Ask_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Ask_Weighted__c</fullName>
    <label>Ask. Weighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>