force-app/main/default/objects/Building__c/fields/Ask_Weighted_Rate__c.field-meta.xml
<CustomField>
    <fullName>Ask_Weighted_Rate__c</fullName>
    <label>Ask. Weighted Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>