force-app/main/default/objects/Building__c/fields/Asking_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Asking_Annual_Rent__c</fullName>
    <formula>IF( RecordType.Name =&apos;Retail&apos;, Asking_Price__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asking Annual Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>