force-app/main/default/objects/Building__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5 - (A5-1 &amp; A5-2)</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B2-2</fullName>
            </value>
            <value>
                <fullName>B2-3</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>B3-2</fullName>
            </value>
            <value>
                <fullName>B3-3</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B5</fullName>
            </value>
            <value>
                <fullName>B6</fullName>
            </value>
            <value>
                <fullName>C1</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C3-2</fullName>
            </value>
            <value>
                <fullName>C3-3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>R1</fullName>
            </value>
            <value>
                <fullName>R2</fullName>
            </value>
            <value>
                <fullName>AO-01</fullName>
            </value>
            <value>
                <fullName>AO-02</fullName>
            </value>
            <value>
                <fullName>AO-03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>