force-app/main/default/objects/Building__c/fields/Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Center_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Center Name</label>
    <referenceTo>Center__c</referenceTo>
    <relationshipName>Buildings</relationshipName>
    <type>Lookup</type>
</CustomField>