force-app/main/default/objects/Building__c/fields/CenterNameforDataLoader__c.field-meta.xml
<CustomField>
    <fullName>CenterNameforDataLoader__c</fullName>
    <formula>Center_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CenterNameforDataLoader</label>
    <type>Text</type>
</CustomField>