force-app/main/default/objects/Building__c/fields/Client_Min_Price_SAR__c.field-meta.xml
<CustomField>
    <fullName>Client_Min_Price_SAR__c</fullName>
    <formula>Unit_Area_Sqm__c * Min_Weighted_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Min Price SAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>