force-app/main/default/objects/Building__c/fields/FULL_ID__c.field-meta.xml
<CustomField>
    <fullName>FULL_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FULL ID</label>
    <type>Text</type>
</CustomField>