force-app/main/default/objects/Building__c/fields/LandSellableAreaSqm__c.field-meta.xml
<CustomField>
    <fullName>LandSellableAreaSqm__c</fullName>
    <label>Land Sellable Area / Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>