force-app/main/default/objects/Building__c/fields/Lease_Phases__c.field-meta.xml
<CustomField>
    <fullName>Lease_Phases__c</fullName>
    <label>Lease Phases</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PHASE 1</fullName>
                <color>#FF6666</color>
                <label>PHASE 1</label>
            </value>
            <value>
                <fullName>PHASE 2</fullName>
                <color>#AFCADF</color>
                <label>PHASE 2</label>
            </value>
            <value>
                <fullName>PHASE 3</fullName>
                <color>#999999</color>
                <label>PHASE 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>