force-app/main/default/objects/Building__c/fields/Leasing_Rate_Sqm_SAR__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate_Sqm_SAR__c</fullName>
    <label>Leasing Rate / Sqm SAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>