force-app/main/default/objects/Building__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>R</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Level 0</fullName>
            </value>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 10</fullName>
            </value>
            <value>
                <fullName>Level 11</fullName>
            </value>
            <value>
                <fullName>Level 12</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>Level 6</fullName>
            </value>
            <value>
                <fullName>Level 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>