force-app/main/default/objects/Building__c/fields/Lobby_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Lobby_Area_Sqm__c</fullName>
    <label>Lobby Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>