force-app/main/default/objects/Building__c/fields/LocationAndVisibility__c.field-meta.xml
<CustomField>
    <fullName>LocationAndVisibility__c</fullName>
    <label>Location And Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Valley View</fullName>
            </value>
            <value>
                <fullName>Garden View</fullName>
            </value>
            <value>
                <fullName>Sidewalk View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>