force-app/main/default/objects/Building__c/fields/Min_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Min_Weighted__c</fullName>
    <label>Min. Weighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>