force-app/main/default/objects/Building__c/fields/Minimum_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Annual_Rent__c</fullName>
    <label>Minimum Annual Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>