force-app/main/default/objects/Building__c/fields/Office_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Office_Area_Sqm__c</fullName>
    <label>Office Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>