force-app/main/default/objects/Building__c/fields/PreLaunchPrice__c.field-meta.xml
<CustomField>
    <fullName>PreLaunchPrice__c</fullName>
    <formula>LandSellableAmount__c + VillaSellableAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre Launch Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>