force-app/main/default/objects/Building__c/fields/Price_Sqm_SAR_Lobby__c.field-meta.xml
<CustomField>
    <fullName>Price_Sqm_SAR_Lobby__c</fullName>
    <label>Price Sqm SAR /Lobby</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>