force-app/main/default/objects/Building__c/fields/Price_Sqm_SAR_Terraces__c.field-meta.xml
<CustomField>
    <fullName>Price_Sqm_SAR_Terraces__c</fullName>
    <label>Price Sqm SAR /Terraces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>