force-app/main/default/objects/Building__c/fields/RN__c.field-meta.xml
<CustomField>
    <fullName>RN__c</fullName>
    <label>RN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>