force-app/main/default/objects/Building__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available Units</fullName>
                <color>#FF0000</color>
                <default>true</default>
                <label>Available Units</label>
            </value>
            <value>
                <fullName>Offered</fullName>
                <color>#FF9900</color>
                <label>Offered</label>
            </value>
            <value>
                <fullName>Booked</fullName>
                <color>#419249</color>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Booked &amp; Paid</fullName>
                <color>#3366FF</color>
                <label>Booked &amp; Paid</label>
            </value>
            <value>
                <fullName>Signed &amp; Paid</fullName>
                <color>#993399</color>
                <label>Signed &amp; Paid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>