force-app/main/default/objects/Building__c/fields/Total_Leasable_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Total_Leasable_Area_Sqm__c</fullName>
    <formula>Total_Unit_Area_Sqm__c +Lobby_Area_Sqm__c + Office_Area_Sqm__c + Passage_Area_Sqm__c + wc_Toilets_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Lobby Area Sqm + Office  Area Sqm + Passage Area Sqm + wc Toilets Area Sqm</inlineHelpText>
    <label>Total Leasable Area Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>