force-app/main/default/objects/Building__c/fields/Total_NSA__c.field-meta.xml
<CustomField>
    <fullName>Total_NSA__c</fullName>
    <formula>Unit_Area_Sqm_NSA__c * Leasing_Rate_Sqm_SAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Area  Sqm (NSA) * Price Sqm SAR / NSA</inlineHelpText>
    <label>Total (NSA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>