force-app/main/default/objects/Building__c/fields/Total_Prices_Lobby_Areas__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Lobby_Areas__c</fullName>
    <formula>Lobby_Area_Sqm__c*Price_Sqm_SAR_Lobby__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Prices (Lobby Areas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>