force-app/main/default/objects/Building__c/fields/Total_Prices_Services_Areas__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Services_Areas__c</fullName>
    <formula>Service_Area_Sqm__c * Price_Sqm_SAR_Services__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Area Sqm * Price Sqm SAR /Services</inlineHelpText>
    <label>Total Prices (Services Areas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>