force-app/main/default/objects/Building__c/fields/Total_Prices_Terraces_Areas__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Terraces_Areas__c</fullName>
    <formula>Terrace_Area_Sqm__c *  Price_Sqm_SAR_Terraces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Terrace Area Sqm * Price Sqm SAR /Terraces</inlineHelpText>
    <label>Total Prices (Terraces Areas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>