force-app/main/default/objects/Building__c/fields/Total_Unit_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_Area_Sqm__c</fullName>
    <formula>Unit_Area_Sqm_NSA__c+Service_Area_Sqm__c+Terrace_Area_Sqm__c+Lobby_Area_Sqm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Area  Sqm (NSA) + Services Area Sqm + Terrace Area Sqm</inlineHelpText>
    <label>Gross Area Size Sqm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>