force-app/main/default/objects/Building__c/fields/Tower_Name__c.field-meta.xml
<CustomField>
    <fullName>Tower_Name__c</fullName>
    <label>Tower Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Building 1</fullName>
                <color>#000099</color>
                <label>Building 1</label>
            </value>
            <value>
                <fullName>Building 2 (K103)</fullName>
                <color>#000099</color>
                <label>Building 2 (K103)</label>
            </value>
            <value>
                <fullName>Tower 01</fullName>
            </value>
            <value>
                <fullName>Tower 01 (K101)</fullName>
            </value>
            <value>
                <fullName>Tower 02</fullName>
            </value>
            <value>
                <fullName>Tower 02 (K102)</fullName>
            </value>
            <value>
                <fullName>Tower 03</fullName>
            </value>
            <value>
                <fullName>Tower 04</fullName>
            </value>
            <value>
                <fullName>Tower 04 (K105)</fullName>
            </value>
            <value>
                <fullName>Tower 05</fullName>
            </value>
            <value>
                <fullName>Tower 05 (K104)</fullName>
            </value>
            <value>
                <fullName>Tower 06</fullName>
            </value>
            <value>
                <fullName>Tower 07</fullName>
            </value>
            <value>
                <fullName>Tower 07 (207)</fullName>
            </value>
            <value>
                <fullName>Tower 08</fullName>
            </value>
            <value>
                <fullName>Tower 09</fullName>
            </value>
            <value>
                <fullName>Tower 10</fullName>
            </value>
            <value>
                <fullName>Tower 10 &amp; 11</fullName>
                <color>#000099</color>
                <label>Tower 10 &amp; 11</label>
            </value>
            <value>
                <fullName>Tower 11</fullName>
            </value>
            <value>
                <fullName>Tower 12</fullName>
            </value>
            <value>
                <fullName>Tower 13</fullName>
                <color>#000099</color>
                <label>Tower 13</label>
            </value>
            <value>
                <fullName>Tower 14</fullName>
            </value>
            <value>
                <fullName>Tower 15</fullName>
            </value>
            <value>
                <fullName>Tower 16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>