force-app/main/default/objects/Building__c/fields/TowerCode__c.field-meta.xml
<CustomField>
    <fullName>TowerCode__c</fullName>
    <label>Tower Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BR-A01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>