force-app/main/default/objects/Building__c/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessories</fullName>
                <color>#78C953</color>
                <label>Accessories</label>
            </value>
            <value>
                <fullName>Chocolates</fullName>
                <color>#78C953</color>
                <label>Chocolates</label>
            </value>
            <value>
                <fullName>Dates</fullName>
                <color>#78C953</color>
                <label>Dates</label>
            </value>
            <value>
                <fullName>Gifts</fullName>
                <color>#78C953</color>
                <label>Gifts</label>
            </value>
            <value>
                <fullName>Gold Jewellery</fullName>
                <color>#78C953</color>
                <label>Gold Jewellery</label>
            </value>
            <value>
                <fullName>Textile</fullName>
                <color>#78C953</color>
                <label>Textile</label>
            </value>
            <value>
                <fullName>Watches</fullName>
                <color>#78C953</color>
                <label>Watches</label>
            </value>
            <value>
                <fullName>Fashion</fullName>
                <color>#009900</color>
                <label>Fashion</label>
            </value>
            <value>
                <fullName>Sportswear</fullName>
                <color>#009900</color>
                <label>Sportswear</label>
            </value>
            <value>
                <fullName>Coffee Shop</fullName>
                <color>#A845DC</color>
                <label>Coffee Shop</label>
            </value>
            <value>
                <fullName>Restaurant</fullName>
                <color>#993399</color>
                <label>Restaurant</label>
            </value>
            <value>
                <fullName>Car Rentals</fullName>
                <color>#3366FF</color>
                <label>Car Rentals</label>
            </value>
            <value>
                <fullName>Co Working</fullName>
                <color>#FF9900</color>
                <label>Co Working</label>
            </value>
            <value>
                <fullName>Female GYM</fullName>
                <color>#3366FF</color>
                <label>Female GYM</label>
            </value>
            <value>
                <fullName>Male GYM</fullName>
                <color>#3366FF</color>
                <label>Male GYM</label>
            </value>
            <value>
                <fullName>Mens Salon</fullName>
                <color>#3366FF</color>
                <label>Mens Salon</label>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
                <color>#FF0000</color>
                <label>Pharmacy</label>
            </value>
            <value>
                <fullName>Printing</fullName>
                <color>#FF9900</color>
                <label>Printing</label>
            </value>
            <value>
                <fullName>Bank</fullName>
                <color>#3366FF</color>
                <label>Bank</label>
            </value>
            <value>
                <fullName>Super Market</fullName>
                <color>#FF0000</color>
                <label>Super Market</label>
            </value>
            <value>
                <fullName>Telecom</fullName>
                <color>#FF99FF</color>
                <label>Telecom</label>
            </value>
            <value>
                <fullName>Womens Salon</fullName>
                <color>#3366FF</color>
                <label>Womens Salon</label>
            </value>
            <value>
                <fullName>Nutrition Store</fullName>
                <color>#FF9900</color>
                <label>Nutrition Store</label>
            </value>
            <value>
                <fullName>SPA / GYM</fullName>
                <color>#FF9900</color>
                <label>SPA / GYM</label>
            </value>
            <value>
                <fullName>Travel Agency</fullName>
                <color>#3366FF</color>
                <label>Travel Agency</label>
            </value>
            <value>
                <fullName>Mobiles / Laptops</fullName>
                <color>#FF99FF</color>
                <label>Mobiles / Laptops</label>
            </value>
            <value>
                <fullName>Supermarket</fullName>
                <color>#FF0000</color>
                <label>Supermarket</label>
            </value>
            <value>
                <fullName>MEN&apos;S GYM</fullName>
                <color>#3366FF</color>
                <label>MEN&apos;S GYM</label>
            </value>
            <value>
                <fullName>MEN&apos;S SPA</fullName>
                <color>#3366FF</color>
                <label>MEN&apos;S SPA</label>
            </value>
            <value>
                <fullName>Food Hall</fullName>
                <color>#FF6600</color>
                <label>Food Hall</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>