force-app/main/default/objects/Building__c/fields/Unit_Area_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Unit_Area_Sqm__c</fullName>
    <label>Unit Area / Sqm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>