force-app/main/default/objects/Building__c/fields/Unit_Area_Sqm_NSA__c.field-meta.xml
<CustomField>
    <fullName>Unit_Area_Sqm_NSA__c</fullName>
    <label>Unit Area Sqm (NSA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>